objects/Site_Staff__c.object
<CustomObject>
    <description>Used to connect Contacts with Study Sites to represent a Principal Investigator&apos;s team</description>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Study_Site__r.Clinical_Trial_Profile__c,  Study_Site__r.Clinical_Trial_Profile__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinical Trial Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Level__c</fullName>
        <label>Delegate Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <label>Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff&apos;s Study Sites</relationshipLabel>
        <relationshipName>PI_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>Study_Site__r.Principal_Investigator__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Site Staff</relationshipLabel>
        <relationshipName>Site_Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Staff #{0000}</displayFormat>
        <label>Site Staff</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>